# Modern_Career_Platform

./: .gitignore  README.md  requirements.txt
API_Logics/: Github.py  coder.py  giter.py  hem.py  mcp.py
MCP_Client/: client.py  models.py  university_server.py
MCP_Server/: Database_Server.py  Evaluation_Server.py  Mongo_Server.py  Simple_Server.py  mcp_mounter.py  pyproject.toml
